--- a/wombo_web_server/static/worst.html
+++ b/wombo_web_server/static/worst.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Wombo Combo - Peggiori Combo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header>
-    <div class="logo">Ah, Wombo Combo?</div>
+    <div class="logo">
+        <a href="index.html">Ah, Wombo Combo?</a>
+    </div>
     <nav class="nav-links">
         <a href="index.html">Home</a>
-        <a href="top.html">Top Combo</a>
+        <a href="top.html">Migliori Combo</a>
     </nav>
 </header>
 
 <main>
-    <h1>Le peggiori combo mai create</h1>
-    <!-- contenuto della pagina -->
+    <section class="page-title">
+        <h1>Le peggiori combo secondo la community</h1>
+    </section>
+
+    <section class="combo-row row-1">
+        <img src="img/menta-latte.png" alt="Vodka menta + Latte" />
+        <div class="combo-desc">
+            <h2>Vodka alla menta + Latte</h2>
+            <p>Un mix cremoso e mentolato che ha fatto inorridire tutti. Mai più.</p>
+        </div>
+    </section>
+
+    <section class="combo-row row-2 reverse">
+        <div class="combo-desc">
+            <h2>Jägermeister + Latte</h2>
+            <p>Quando l’amaro incontra il latticino: un esperimento da dimenticare.</p>
+        </div>
+        <img src="img/jager-latte.png" alt="Jager + Latte" />
+    </section>
+
+    <section class="combo-row row-3">
+        <img src="img/jack-redbull.png" alt="Jack Daniel's + Red Bull" />
+        <div class="combo-desc">
+            <h2>Jack Daniel's + Red Bull</h2>
+            <p>Troppa energia, troppo whisky, troppo tutto. Una corsa al mal di testa.</p>
+        </div>
+    </section>
 </main>
 </body>
 </html>
