--- a/wombo_web_server/static/top.html
+++ b/wombo_web_server/static/top.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <header>
-    <div class="logo">Ah, Wombo Combo?</div>
+    <div class="logo">
+        <a href="index.html">Ah, Wombo Combo?</a>
+    </div>
     <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="worst.html">Peggiori Combo</a>
